--- a/client/src/styles/login/login.scss
+++ b/client/src/styles/login/login.scss
@@ -1,5 +1,17 @@
 
 .login-page {
 
-    .something.iswrong {}
+    .image-div {
+        height: 400px;
+        width: 100%;
+        text-align: center;
+
+        .logo {
+            display: inline-block;
+            width: 300px;
+            height: 200px;
+            background: url(../../images/login.svg);
+            background-size: contain;
+        }
+    }
 }
